ARXIVNG-1521 updated async functions, controllers, routes to support simplified design
